--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -23,7 +23,7 @@ rounded-corners-exclude = [
 #  "class_g = 'XTerm'",
   "class_g = 'kitty'",
  #	"class_g = 'Alacritty'",
-#  "class_g = 'Polybar'",
+  "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
@@ -159,19 +159,17 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 1.0
-#	frame-opacity = 0.7;
+# frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0 
 # menu-opacity is depreciated use dropdown-menu and popup-menu instead.
 
 #If using these 2 below change their values in line 510 & 511 aswell
-popup_menu = { opacity = 0.8; }
-dropdown_menu = { opacity = 0.8; }
+popup_menu = { opacity = 1.0; }
+dropdown_menu = { opacity = 1.0; }
 
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
@@ -210,8 +208,8 @@ opacity-rule = [
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
+  #	"100:class_g    = 'Alacritty'",
+  #	"100:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
@@ -501,9 +499,9 @@ log-level = "info";
 wintypes:
 {
   normal = { fade = false; shadow = false; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 1.00; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 1.0; }
+  dropdown_menu = { opacity = 1.0; }
 };
