--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -22,7 +22,7 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #FF000000
+background = #FF272822
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
@@ -35,34 +35,29 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:HDMI-1}
 ;width = X% and offset-x = Y%, so that X + 2 * Y = 100
 ;Y=(100-x)/2
-width = 95%
+width = 98.25%
 height = 18
-offset-x = 2.5%
+offset-x = 0.845%
 offset-y = 0.5%
-radius = 3.0
+radius = 8.0
 fixed-center = true
-
 background = ${colors.background}
 foreground = ${colors.foreground}
-
 line-size = 0
 line-color = #f00
-
 border-size = 0
 border-color = #00000000
-
-padding-left = 1
-padding-right = 15
-
+padding-left = 3
+padding-right = 18
 module-margin-left = 1
 module-margin-right = 1
 
 font-0 = fixed:pixelsize=8;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
-#	font-0 = DejaVu Sans:pixelsize=8;1
-#	font-1 = PowerlineSymbols:fontformat=truetype:size=8:antialias=false;0
-#	font-2 = siji:pixelsize=10;1
+; font-0 = DejaVu Sans:pixelsize=8;1
+; font-1 = PowerlineSymbols:fontformat=truetype:size=8:antialias=false;0
+; font-2 = siji:pixelsize=10;1
 
 modules-left = i3
 modules-center = powermenu
@@ -72,9 +67,9 @@ tray-position = right
 tray-padding = 4
 tray-detached = true
 tray-maxsize = 10
-tray-offset-x = 0
+tray-offset-x = -8
 tray-offset-y = 0
-tray-background = ${root.background}
+tray-background = ${self.background}
 
 wm-restack = i3
 override-redirect = true
@@ -211,19 +206,16 @@ ramp-foreground = ${colors.foreground-alt}
 [module/wlan]
 ; this one doesn't work
 type = internal/network
-interface = net1
+interface = wlo1
 interval = 3.0
-
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
 label-connected = %essid%
-
-format-disconnected =
+format-disconnected = NA
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
-
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
@@ -234,7 +226,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 [module/eth]
 ; also doesn't work - network applet prob?
 type = internal/network
-interface = eno1
+interface = enp3s0
 interval = 3.0
 
 format-connected-underline = #55aa55
