--- a/.config/i3/config
+++ b/.config/i3/config
@@ -226,8 +226,8 @@ exec_always --no-startup-id ~/.local/bin/launchpolybar.sh
 exec --no-startup-id nm-applet
 
 # wallpaper options
-#	exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
-exec_always --no-startup-id ~/.local/bin/styli.sh -s colorful
+exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/GgcdiFN.jpg
+#	exec_always --no-startup-id ~/.local/bin/styli.sh -s colorful
 
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
@@ -318,9 +318,10 @@ client.urgent           $ubgcolor       $ubgcolor       $textcolor      $ubgcolo
 
 # default gaps
 #	for_window [class=".*"] border pixel 1 #*
-gaps inner 10
+gaps inner 8
 gaps outer 1
-gaps top 15
+gaps top 16
+gaps bottom -6
 
 # borders for i3-gaps
 hide_edge_borders horizontal
@@ -486,8 +487,8 @@ bindsym $mod+Shift+p 		exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50
 bindsym $mod+p 				exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 6 pcmanfm
 
 bindsym $mod+Shift+u 		exec --no-startup-id tdrop -am -w 98% -y 4% -x 1% -h 95% -n 7 alacritty
-bindsym $mod+Shift+i 		exec --no-startup-id tdrop -am -w 48% -y 4% -x 1% -h 95% -n 8 alacritty
-bindsym $mod+Shift+o 		exec --no-startup-id tdrop -am -w 49% -y 4% -x 50% -h 95% -n 9 alacritty
+bindsym $mod+Shift+i 		exec --no-startup-id tdrop -am -w 49% -y 4% -x 1% -h 95% -n 8 alacritty
+bindsym $mod+Shift+o 		exec --no-startup-id tdrop -am -w 48% -y 4% -x 51% -h 95% -n 9 alacritty
 #bindsym $mod+Shift+q 		exec --no-startup-id tdrop -am -w 98% -y 4% -x 1% -h 95% -n 10 qutebrowser
 bindsym $mod+Shift+n 		exec --no-startup-id tdrop -am -w 98% -y 4% -x 1% -h 95% -n 11 alacritty -e ranger
 # NB trop -n 20 is being used to open windows by dmconf
