--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -35,10 +35,10 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:HDMI-1}
 ;width = X% and offset-x = Y%, so that X + 2 * Y = 100
 ;Y=(100-x)/2
-width = 98.25%
+width = 98.75%
 height = 18
-offset-x = 0.845%
-offset-y = 0.5%
+offset-x = 0.625%
+offset-y = 0.4%
 radius = 8.0
 fixed-center = true
 background = ${colors.background}
@@ -52,12 +52,13 @@ padding-right = 18
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = fixed:pixelsize=8;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-; font-0 = DejaVu Sans:pixelsize=8;1
-; font-1 = PowerlineSymbols:fontformat=truetype:size=8:antialias=false;0
+font-0 = DejaVu Sans:pixelsize=8;1
+; font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-2 = siji:pixelsize=10;1
+; you can have as many fonts as you want
+font-1 = Font Awesome 5 Free:pixelsize=8;2
+font-2 = Font Awesome 5 Free Solid:pixelsize=8;2
+font-3 = Font Awesome 5 Brands:pixelsize=8;2
 
 modules-left = i3
 modules-center = powermenu
@@ -73,10 +74,8 @@ tray-background = ${self.background}
 
 wm-restack = i3
 override-redirect = true
-
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
-
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -87,30 +86,37 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+; pin-workspaces = true
+
+;               
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
 
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %icon%
 label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %icon%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
@@ -245,7 +251,8 @@ format-disconnected =
 type = custom/menu
 expand-right = true
 format-spacing = 1
-label-open = 
+label-open = 
+; label-open =  
 label-open-foreground = ${colors.secondary}
 label-close =  cancel
 label-close-foreground = ${colors.secondary}
