--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -113,7 +113,8 @@ type = custom/script
 interval = 1
 format-prefix = "G"
 label = %output%
-exec = [[ $(pgrep -fl push-all | wc -l) -ne 0 ]] && echo "GPA" || echo "NO"
+exec-if = $(pgrep -fl push-all | wc -l) -ne 0 
+exec = echo "GPA" 
 
 [module/mail]
 type = custom/script
