--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -23,7 +23,7 @@ rounded-corners-exclude = [
 #  "class_g = 'XTerm'",
   "class_g = 'kitty'",
  #	"class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
+#  "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
@@ -159,17 +159,19 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 0.7;
+frame-opacity = 1.0
+#	frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0 
 # menu-opacity is depreciated use dropdown-menu and popup-menu instead.
 
 #If using these 2 below change their values in line 510 & 511 aswell
-popup_menu = { opacity = 1.0; }
-dropdown_menu = { opacity = 1.0; }
+popup_menu = { opacity = 0.8; }
+dropdown_menu = { opacity = 0.8; }
 
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
@@ -208,8 +210,8 @@ opacity-rule = [
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
-  #	"100:class_g    = 'Alacritty'",
-  #	"100:class_g     = 'Polybar'",
+  "100:class_g    = 'Alacritty'",
+  "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
@@ -230,14 +232,14 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-#blur-background = false;
+# blur-background = true;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-#blur-background-frame = false;
+# blur-background-frame = false;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -253,9 +255,9 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  #method = "kawase";
-  method = "kernel";
-  strength = 0;
+  method = "kawase";
+  #method = "kernel";
+  strength = 3;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -266,7 +268,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  "window_type = 'dock'",
+  #"window_type = 'dock'",
   #"window_type = 'desktop'",
   #"class_g = 'URxvt'",
   #
@@ -499,9 +501,9 @@ log-level = "info";
 wintypes:
 {
   normal = { fade = false; shadow = false; }
-  tooltip = { fade = true; shadow = true; opacity = 1.00; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 1.0; }
-  dropdown_menu = { opacity = 1.0; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
 };
