--- a/.config/i3/config
+++ b/.config/i3/config
@@ -225,9 +225,9 @@ exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wal
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
 exec --no-startup-id qutebrowser
-exec --no-startup-id sleep 5 && alacritty -t neomutt -e neomutt
-exec --no-startup-id sleep 6 && alacritty -t newsboat -e newsboat
-exec --no-startup-id sleep 7 && blueman-manager
+exec --no-startup-id sleep 2 && alacritty -t neomutt -e neomutt
+exec --no-startup-id sleep 3 && alacritty -t newsboat -e newsboat
+exec --no-startup-id sleep 4 && blueman-manager
 
 # Lock
 # if you have i3lock
@@ -266,7 +266,7 @@ set $barcolor	#2D2A2E99
 
 set $textcolor  #ffffff  
 set $itextcolor #969696
-set $ubgcolor   #ff0000
+set $ubgcolor   #403E41
 
 #                       border          background      text            indicator
 client.focused          $bgcolor        $bgcolor        $textcolor      $bgcolor
