--- a/.config/i3/config
+++ b/.config/i3/config
@@ -76,6 +76,7 @@ mode "command" {
 bindsym $mod+q exec --no-startup-id qutebrowser; workspace $ws2
 bindsym $mod+e exec --no-startup-id alacritty -e bash -c 'export EDITOR=nvim && neomutt'; workspace $ws3
 bindsym $mod+n exec --no-startup-id alacritty -e newsboat; workspace $ws4
+bindsym $mod+t exec --no-startup-id alacritty -e youtube-viewer; workspace $ws4
 bindsym $mod+u exec --no-startup-id blueman-manager; workspace $ws5
 
 # for keyindicator
@@ -226,8 +227,9 @@ exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bas
 exec --no-startup-id alacritty
 exec --no-startup-id qutebrowser
 exec --no-startup-id sleep 2 && alacritty -t neomutt -e neomutt
-exec --no-startup-id sleep 3 && alacritty -t newsboat -e newsboat
-exec --no-startup-id sleep 4 && blueman-manager
+exec --no-startup-id sleep 3 && alacritty -t youtubeviewer -e youtube-viewer
+exec --no-startup-id sleep 4 && alacritty -t newsboat -e newsboat
+exec --no-startup-id sleep 5 && blueman-manager
 
 # Lock
 # if you have i3lock
@@ -242,6 +244,7 @@ exec --no-startup-id sleep 4 && blueman-manager
 for_window [class="qutebrowser"] move to workspace $ws2
 assign [title="neomutt"] $ws3
 assign [title="newsboat"] $ws4
+assign [title="youtubeviewer"] $ws4
 for_window [class="Blueman-manager"] move to workspace $ws5
 
 # here's how you set floating and positioning:
