--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,5 +6,5 @@
 
 config_version: 2
 settings:
-  statusbar.show:
-    global: never
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: true
