--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -8,3 +8,5 @@ config_version: 2
 settings:
   content.register_protocol_handler:
     https://mail.google.com?extsrc=mailto&url=%25s: true
+  statusbar.show:
+    global: always
