--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -179,20 +179,20 @@ MIXER=default
 
 # this is actually good i just dont have a use for it right now
 # the DEFAULT_MODE variable must be either timer or stopwatch
-#	[timer_and_stopwatch]
-#	command=$SCRIPT_DIR/timer_and_stopwatch
-#	format=json
-#	interval=1
-#	TIMER_LABEL=⏳
-#	STOPWATCH_LABEL=⏱️
-#	DEFAULT_MODE=timer
-#	DEFAULT_STOPWATCH=0
-#	DEFAULT_TIMER=3600
-#	PLAY_LABEL=(playing)
-#	PAUSE_LABEL=(paused)
-#	TIMER_LOOP=true
-#	# YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
-#	NEUTRAL_COLOR=#1b2b34bf
+[timer_and_stopwatch]
+command=$SCRIPT_DIR/timer_and_stopwatch
+format=json
+interval=1
+TIMER_LABEL=⏳
+STOPWATCH_LABEL=⏱️
+DEFAULT_MODE=timer
+DEFAULT_STOPWATCH=0
+DEFAULT_TIMER=1500
+PLAY_LABEL=(playing)
+PAUSE_LABEL=(paused)
+TIMER_LOOP=true
+# YOU NEED TO CHANGE THIS WHEN YOU CHANGE THE i3bar in i3 config :bar:
+NEUTRAL_COLOR=#1b2b34bf
 
 
 [calendar]
