--- a/.config/i3/config
+++ b/.config/i3/config
@@ -158,7 +158,8 @@ bindsym $mod+a focus parent
 set $ws1 ""
 set $ws2 "🌏"
 set $ws3 "📰"
-set $ws4 "📬"
+#	set $ws4 "📬"
+set $ws4 "😊"
 set $ws5 "🎵"
 
 # switch to workspace
@@ -230,7 +231,8 @@ exec --no-startup-id alacritty
 exec --no-startup-id qutebrowser
 exec --no-startup-id sleep 3 && alacritty -t youtubeviewer -e youtube-viewer
 exec --no-startup-id sleep 4 && alacritty -t newsboat -e newsboat
-exec --no-startup-id sleep 5 && alacritty -t neomutt -e neomutt
+exec --no-startup-id sleep 4 && emacs
+#	exec --no-startup-id sleep 5 && alacritty -t neomutt -e neomutt
 exec --no-startup-id sleep 6 && blueman-manager
 
 # Lock
@@ -244,6 +246,7 @@ exec --no-startup-id sleep 6 && blueman-manager
 ## look for: WM_CLASS <look at 2nd result>
 #for_window [class="Alacritty"] move to workspace $ws1
 for_window [class="qutebrowser"] move to workspace $ws2
+for_window [class="Emacs"] move to workspace $ws4
 assign [title="newsboat"] $ws3
 assign [title="youtubeviewer"] $ws3
 assign [title="neomutt"] $ws4
