--- a/.config/youtube-viewer/youtube-viewer.conf
+++ b/.config/youtube-viewer/youtube-viewer.conf
@@ -51,7 +51,7 @@ our $CONFIG = {
   debug                         => 0,
   download_and_play             => 0,
   download_with_wget            => 1,
-  downloads_dir                 => "~/Downloads",
+  downloads_dir                 => "Downloads",
   env_proxy                     => 1,
   fat32safe                     => 0,
   ffmpeg_cmd                    => "/usr/bin/ffmpeg",
