--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,7 +6,5 @@
 
 config_version: 2
 settings:
-  content.notifications.enabled:
-    https://www.us.hsbc.com: true
-  statusbar.show:
-    global: always
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: true
