--- a/.config/i3/config
+++ b/.config/i3/config
@@ -224,7 +224,7 @@ exec_always --no-startup-id picom --experimental-backend
 
 # wallpaper options
 exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Abstract-grey-wallpaper-HD-desktop.jpg
-#	exec_always ~/.local/bin/styli.sh -p
+#	exec_always styli.sh -s linux
 
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 1 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
@@ -461,18 +461,18 @@ for_window [class="Yad"] floating enable
 
 # moar keybindings
 bindsym $mod+Shift+e 		exec --no-startup-id emacs
-bindsym $mod+Shift+f		exec --no-startup-id bash ~/.local/bin/fontpreview.sh && qutebrowser ~/.local/bin/fonts.html; workspace $ws2
-bindsym $mod+Shift+w		exec --no-startup-id bash ~/.local/bin/styli.sh -p
+bindsym $mod+Shift+f		exec --no-startup-id bash fontpreview.sh && qutebrowser ~/.local/bin/fonts.html; workspace $ws2
+bindsym $mod+Shift+w		exec --no-startup-id bash styli.sh -s linux
 
-bindsym $mod+Shift+x		exec --no-startup-id ~/.local/bin/dmprompt "Poweroff?" ~/.local/bin/poweroff.sh
+bindsym $mod+Shift+x		exec --no-startup-id dmprompt "Poweroff?" ~/.local/bin/poweroff.sh
 bindsym $mod+Shift+m		exec --no-startup-id keynav
 bindsym $mod+Shift+a		exec --no-startup-id ibus emoji
 bindsym $mod+Escape			workspace prev
 bindsym $mod+Tab			workspace back_and_forth
-bindsym $mod+BackSpace		exec --no-startup-id bash ~/.local/bin/flash-win
+bindsym $mod+BackSpace		exec --no-startup-id bash flash-win
 #bindsym $mod+Shift+Escape	exec sudo poweroff # OR exec bash ~/.local/bin/poweroff.sh
-bindsym $mod+g				exec --no-startup-id bash ~/.local/bin/push-all
-bindsym $mod+b				exec --no-startup-id bash ~/.local/bin/backup-phone.sh
+bindsym $mod+g				exec --no-startup-id bash push-all
+bindsym $mod+b				exec --no-startup-id bash backup-phone.sh
 bindsym $mod+y				exec --no-startup-id youtube-dl https://youtube.com/playlist?list=PLrbbUMGM2tEj3PbprusLpVP4gKCYoIDuc 
 
 bindsym $mod+Shift+c		exec --no-startup-id tdrop -am -w 30% -y 30% -x 35% -n 2 alacritty -e R -q --vanilla
