--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -24,6 +24,12 @@
 # NOTES:
 #	i is for video info
 
+# scrots
+#	s is for screenshot
+# https://mpv.io/manual/master/#taking-screenshots
+# READ THE MAN, LOOKED ONLINE - IT IS IMPOSSIBLE TO SAVE SCROTS TO ANYTHING BESIDES HOME
+screenshot-directory=~/Desktop/
+
 # also 0 and 9
 UP add volume +2
 DOWN add volume -2
